2010-01-04  Nick Clifton  <nickc@redhat.com>

	* po/ru/po: Updated Russian translation.

For older changes see ChangeLog-2009

Local Variables:
mode: change-log
left-margin: 8
fill-column: 74
version-control: never
End: